[package]
name = "eventlogs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "High-Performance, Batteries-Included, Event Sourcing for Rust"
repository = "https://github.com/davestearns/eventlogs"
keywords = ["event-sourcing", "events", "logs"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
const_format = "0.2.32"
deadpool-postgres = { version = "0.14.0", optional = true }
deadpool-redis = { version = "0.15.1", optional = true }
futures-util = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
trait-variant = "0.1.2"

[dev-dependencies]
serde_json = "1.0.120"
uuid = { version = "1.10.0", features = ["v7"] }

[features]
default = ["postgres-store", "redis-cache"]
postgres-store = ["dep:deadpool-postgres", "dep:tokio-postgres"]
redis-cache = ["dep:deadpool-redis"]
